--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_FACEBOOK="https://www.facebook.com/eragasamuel?mibextid=LQQJ4d"
 VITE_LINKEDIN="https://www.linkedin.com/in/samuel-eraga-21405819b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
-VITE_TWITTER="www.twitter.com/Samuel_Eraga"
+VITE_TWITTER="https://www.twitter.com/Samuel_Eraga"
 VITE_INSTA="https://www.instagram.com/swiftexchange007?igsh=MTZrZWwzaHF0bTR4ag%3D%3D&utm_source=qr"
 VITE_WHATSAPP="https://wa.me/+2347032188798"
